# qt5-samples

./: .gitignore  CMakeCache.txt  README.md
gallery/: CMakeLists.txt
gallery/core/: Album.cpp  Album.h  AlbumDao.cpp  AlbumDao.h  AlbumModel.cpp  AlbumModel.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Picture.cpp  Picture.h  PictureDao.cpp  PictureDao.h  PictureModel.cpp  PictureModel.h  exports.h
gallery/desktop/: AlbumListWidget.cpp  AlbumListWidget.h  AlbumListWidget.ui  AlbumWidget.cpp  AlbumWidget.h  AlbumWidget.ui  CMakeLists.txt  GalleryWidget.cpp  GalleryWidget.h  GalleryWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PictureDelegate.h  PictureWidget.cpp  PictureWidget.h  PictureWidget.ui  ThumbnailProxyModel.cpp  ThumbnailProxyModel.h
mandelbrot/: CMakeLists.txt  Job.cpp  Job.h  JobResult.h  MandelbrotCalculator.cpp  MandelbrotCalculator.h  MandelbrotMainWindow.cpp  MandelbrotMainWindow.h  MandelbrotMainWindow.ui  MandelbrotWidget.cpp  MandelbrotWidget.h  main.cpp
sysinfo/: cpuwidget.cpp  cpuwidget.h  mainwindow.cpp  mainwindow.ui  memorywidget.cpp  memorywidget.h  sysinfo.cpp  sysinfo.h  sysinfo.pro  sysinfolinuximpl.cpp  sysinfolinuximpl.h  sysinfowidget.cpp  sysinfowidget.h  sysinfowindowsimpl.cpp  sysinfowindowsimpl.h
sysinfo-cmake/: CMakeLists.txt  CpuWidget.cpp  CpuWidget.h  MemoryWidget.cpp  MemoryWidget.h  README.md  SysInfo.cpp  SysInfo.h  SysInfoLinuxImpl.cpp  SysInfoLinuxImpl.h  SysInfoMain.ui  SysInfoMainWindow.cpp  SysInfoMainWindow.h  SysInfoWidget.cpp  SysInfoWidget.h  SysInfoWindowsImpl.cpp  SysInfoWindowsImpl.h  main.cpp  resources.qrc
todo/: mainwindow.cpp  mainwindow.ui  task.cpp  task.h  task.ui
